--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.marcinczeczko</groupId>
-    <artifactId>quarkus-lambda-native</artifactId>
+    <groupId>pl.jvng.cryptomarketserverless</groupId>
+    <artifactId>crypto-market-serverless</artifactId>
     <version>3.0-SNAPSHOT</version>
     <properties>
         <quarkus.version>1.2.1.Final</quarkus.version>
