--- a/serverless.yml
+++ b/serverless.yml
@@ -1,11 +1,10 @@
-service: quarkus-lambda
+service: crypto-market-serverless
 
 frameworkVersion: ">=1.56.1"
 
 custom:
   function:
-    addHandler: add
-    fetchHandler: fetchCrypto
+    fetchHandler: crypto
   dynamodb:
     tableName: ${self:service}-${opt:stage, self:provider.stage}
 
@@ -31,21 +30,21 @@ package:
   individually: true
 
 functions:
-  fetchCrypto:
+  crypto:
     runtime: provided
     handler: native.handler
     package:
       artifact: target/function.zip
     environment:
       DISABLE_SIGNAL_HANDLERS: true
-      QUARKUS_LAMBDA_HANDLER: ${self:custom.function.fetchHandler}
+      QUARKUS_LAMBDA_HANDLER: ${self:custom.function.crypto}
       DYNAMO_TABLE_NAME: ${self:custom.dynamodb.tableName}
       QUARKUS_DYNAMODB_AWS_REGION: ${self:provider.region}
       QUARKUS_PROFILE: ${opt:stage, self:provider.stage}
     events:
       - http:
           method: get
-          path: fetchCrypto
+          path: crypto
 
 resources:
   Resources:
